# Nimbus

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust.yml
crates/nim_spice/: Cargo.toml
crates/nim_spice/src/: circuit.rs  generic.rs  lib.rs
crates/nim_spice/src/devices/: circuit.rs  mod.rs
crates/nim_spice/src/frontend/parser/: lexer.rs  mod.rs  parser.rs  sym_table.rs
crates/nim_ui/: Cargo.toml
crates/nim_ui/src/: canvas.rs  grid.rs  lib.rs  main_panel.rs
docs/: TODO.md  netlist implementation.md  parser_rules.md
examples/bevy_basic/: bevy_egui_scaling.rs  bevy_low_power_mode.rs
nim_schematic/: Cargo.toml
nim_spice/: Cargo.toml
nim_spice/src/: component.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs  token.rs  token_type.rs
nim_spice/src/frontend/parser/: lexer.rs  mod.rs  netlist.rs  parser.rs  token.rs
nim_spice/src/utils/: error.rs
nim_ui/src/: lib.rs  main_panel.rs
nim_ui/src/schematic/: mod.rs
