[package]
name = "nimbus"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
bevy_egui = "0.30.1"

[workspace]
resolver = "2"
members = [
    "nim_spice",
    "nim_ui",
]

# How to scale the UI made with bevy_egui
[[example]]
name = "bevy_egui_scaling"
path = "examples/bevy_basic/bevy_egui_scaling.rs"

# Trigger low power mod (for desktop app)
[[example]]
name = "bevy_low_power_mode"
path = "examples/bevy_basic/bevy_low_power_mode.rs"