[package]
name = "nimbus"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
bevy_egui = "0.30.1"
bevy_infinite_grid = { git = "https://github.com/ForesightMiningSoftwareCorporation/bevy_infinite_grid", branch = "main" }

[workspace]
resolver = "2"
members = [
    "crates/nim_spice",
    "crates/nim_ui",
]
